@@ -7,6 +7,8 @@ dnl with or without modifications, as long as this notice is preserved.
 # Provide a getpass() function if the system doesn't have it.
 AC_DEFUN([gl_FUNC_GETPASS],
 [
+  AC_LIBSOURCES([getpass.c, getpass.h])
+
   AC_REPLACE_FUNCS(getpass)
   AC_CHECK_DECLS_ONCE(getpass)
   if test $ac_cv_func_getpass = no; then
