@@ -1,3 +1,7 @@
+2005-04-25  Derek Price  <derek@ximbiot.com>
+
+	* getpass.m4, gettext.m4: Update from GNULIB.
+
 2005-03-29  Mark D. Baushke  <mdb@cvshome.org>
 
 	* getcwd-path-max.m4: Update from GNULIB.
